--- a/智能客服.md
+++ b/智能客服.md
@@ -4,55 +4,147 @@
 
 ## 腾讯面向海量用户的智能客服设计
 
- **智能交互**  最早，纯粹通过运营机器人知识，我们承接了基本的问答场景。但深入运营后发现，单纯依靠算法、知识语料的调优，效果提升越来越不明显。有时，新增几万或几百万的数据带来的收益，也仅提升了一两个点。 
+https://mp.weixin.qq.com/s?__biz=MzU1NDA4NjU2MA==&mid=2247492811&idx=3&sn=6dc36f9684dbb5bf12ac65bf52760527&chksm=fbea5d04cc9dd41283f556270199c21434b74a7e5d07a606db2f4cae97a0fd844a4ca178f1da&scene=27#wechat_redirect
 
- **对话体验**  
+https://www.infoq.cn/article/electricity-supplier-intelligent-assistant/
 
-1、塑造机器人的共情感，同理心** 。 
+https://www.jianshu.com/writer#/notebooks/28946978/notes/32959323/preview
 
-主要体现在答案运营上。比如我们的“帮到底”原则： 
+https://www.jianshu.com/p/c47a1d1cff7a
+
+https://www.jianshu.com/writer#/notebooks/22086907/notes/32959609/preview
+
+https://www.jianshu.com/writer#/notebooks/22086907/notes/33273856/preview
+
+
+
+
+
+### 智能客服研究方向：
+
+**AI 领域目前解决的问题，使用的都是模式识别的方法**。进一步解释的话，就是通过大量的训练数据去找到数据内里的模式，然后再应用到实际数据的识别上，比如说语音的识别，图像的识别等，对应的是感知智能。
+
+NLP 问题往往需要更高级的方法，因为在语言理解中涉及到大量的上下文，而除了一般意义的语言上下文，更重要的是外部知识上下文。这对应的就是认知智能的范畴，即如何帮助机器人构建概念世界，并作用到 NLP 的处理过程中。
+
+#### **基础层**
+
+1 深度语义匹配模型核心组件
+
+2 问答拒识模型，用于过滤当前问答库无法回答的问题
+
+**3 知识表示建模**
+
+知识都是基于符号表示，知识图谱是利用了图节点来表示概念，关联边来表示概念之间的关系，所以的操作还是符号的检索和匹配，而跟当前的深度神经网络模型没办法有机结合。
+
+是否可以将所有概念和关系都利用深度学习技术向量化，以及如何将规则也使用模型表示等问题?
+
+#### **应用层**
+
+做强化学习在多轮任务机器人的应用，主要用于进行对话策略的在线学习。
+
+目前主流的任务机器人都是基于槽位填充的方法，对话策略主要基于事先约定的规则，不够灵活，而强化学习可以通过结合端到端模型来实现对话策略的灵活调整，并且能够实现在线学习，使得多轮对话模型可以持续优化
+
+#### 
+
+
+
+
+
+
+
+### 开发实践：
+
+基于传统机器学习模型（xgboost）的线上系统，
+
+深度语义匹配模型的论文复现，调优和工程实践。
+
+迁移学习的策略解决语料不足
+
+使用知识图谱来补全 FAQ 机器人的问答死角
+
+评测数据集的构建
+
+
+
+### 交互设计 
+
+#### 背景
+
+最早，纯粹通过运营机器人知识，我们承接了基本的问答场景。但深入运营后发现，单纯依靠算法、知识语料的调优，效果提升越来越不明显。有时，新增几万或几百万的数据带来的收益，也仅提升了一两个点。
+
+ 
+
+#### **对话体验优化**  
+
+1、会话前，进行用户轨迹和风险识别。
+
+2、会话中，制定了对话健康度的评判体系， 一旦AI监测到这段会话可能存在走偏、答错、用户情绪异常等情况，便会由人工实时介入处理。
+
+
+
+3、会话中，试图锁定了意图[退货?]和状态[未发货] ，确定语境
+
+在一个确定语境下，机器人可以实现记忆，智能反问（问题预测），缩短用户命中问题的路径，避免出现传统机器人答非所问、前后文不符的情况。语境的引入，营造了多轮且连贯的对答效果。 
+
+
+
+4、答案体现 “帮到底”原则
 
 举个例子，每天都会有很多用户来咨询微信支付绑定银行卡失败的问题。之前，机器人只会简单引导用户去找银行解决。
 
 现在，机器人不仅为用户查询该银行电话，还会展示地图中附近的银行网点，并教用户联系银行后怎么办。
 
- 2、**给机器人赋予人设，拉近和用户之间的距离**也是一种方式。我们在游戏客服中，让角色声优为答案进行配音，这样不仅保证了服务效果，还能提升用户好感度。  
+
+
+5、机器人赋予人设，声优选择
+
+​     在游戏客服中，让角色声优为答案进行配音，这样不仅保证了服务效果，还能提升用户好感度。  
 
 
 
-3、最核心的体验环节在于对话本身，在腾讯智能客服的设计中，一个复杂对话由三个要素构成：即意图、状态、语境。 
 
- a. 意图是指用户请求客服时的核心诉求，在客服领域，这个诉求在一通会话中往往是唯一的，这意味着我们可以对意图进行锁定。
 
-b. 锁定用户的当前状态，比如电商场景，用户意图是“退货”，我们还需要了解当前状态是未发货，还是发货中或已收货，状态决定了回答的角度，从而得以针对性作答。 
-
-c. 锁定了意图和状态，这轮对话就从一个大的对话域，迁移到一个小的领域，我们称之为语境。 
-
- 在一个确定语境下，机器人可以实现记忆，避免出现传统机器人答非所问、前后文不符的情况。语境的引入，营造了多轮且连贯的对答效果。    
+ 
 
 
 
- 4、引入智能预判，通过问题预测，缩短用户命中问题的路径。若预判准确，超过用户的心理预期，用户对机器人的信任度也会大大提升。 
+
+
+ 
 
 ![1604659288462](%E6%99%BA%E8%83%BD%E5%AE%A2%E6%9C%8D/1604659288462.png)
 
 
 
- **智能协同** 
+####  人机协同
 
- 算法+语料知识运营是一维的，而对话体验设计为优化机器人增加了一个新维度。 
+知识图谱：
 
- 传统人工兜底模式是在用户要求人工、或者机器人识别会话需要人工处理时才触发人工介入。 我们发现这种单一的形式人力成本损耗高、反哺智能效果差，已经不满足日益增加的咨询量。 
+个人理解知识图谱是对一些关键词的属性拓展，从而能找到相关问题或主题。
 
- 把对话分为了会话前、对话中、对话后。 
-
-![1604659397143](%E6%99%BA%E8%83%BD%E5%AE%A2%E6%9C%8D/1604659397143.png)
-
-会话前，进行用户轨迹和风险识别。
+从文章来看，计算词的相似度，从而给出相似的答案。
 
 
 
-会话中，我们制定了对话健康度的评判体系， 相当于听诊器，一旦AI监测到这段会话可能存在走偏、答错、用户情绪异常等情况，便会由人工实时介入处理。 
+意图决策+slots filling 
+
+个人理解，是一种类似对话选择的方式，完成整个业务任务。
+
+
+
+rnn 生成式模型
+
+
+
+主题模型：
+
+在知识图谱中，涉及到样本的主题时，会使用到主题模型。
+
+《LDA数学八卦》可以介绍lda的数学原理。
+
+
+
+
 
 
 
